[project]
name = "kol-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "httpx>=0.27",
    "networkx>=3.3",
    "pydantic>=2.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = ["ipython", "rich"]

[tool.hatch.build.targets.wheel]
packages = ["kol_data"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
